Added sample data
The data folder now contains sample image to test the code. The file paths in the notebooks have been updated accordingly.

--- a/FID_Score.ipynb
+++ b/FID_Score.ipynb
@@ -105,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "identifier = \"sample_data\"\n",
+    "\n",
     "gaussian   = 0.1 \n",
     "\n",
-    "identifier = \"20240426_DATA_brightfield_mixed_edit\"\n",
+    "parent_dir = \".../cyclegan/\"\n",
     "\n",
-    "\n",
-    "parent_dir = \"/mnt/d/cycle_gan/\"\n",
-    "exp_dir_raw = parent_dir + \"data/exp/brightfield_mixed_edit_real/\"\n",
-    "sim_dir_raw = parent_dir + \"data/sim/brightfield_mixed_synth/\"\n",
+    "exp_dir_raw = parent_dir + \"data/exp/sample_data_exp/\"\n",
+    "sim_dir_raw = parent_dir + \"data/sim/sample_data_synth/\"\n",
     "\n",
     "exp_dir = exp_dir_raw[:-1] + \"_256_slices/\"\n",
     "sim_dir = sim_dir_raw[:-1] + \"_gauss_{}_256_slices/\".format(gaussian)"
