--- a/generator.ipynb
+++ b/generator.ipynb
@@ -56,17 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "identifier = \"20240426_DATA_brightfield_mixed_edit\"\n",
-    "\n",
-    "parent_dir = \"/mnt/d/cycle_gan/\"\n",
+    "identifier = \"sample_data\"\n",
     "\n",
     "gaussian   = 0.1 \n",
+    "\n",
+    "parent_dir = \".../cyclegan/\"\n",
     "\n",
     "num_channels=1\n",
     "\n",
     "chkpt_range = -1\n",
     "\n",
-    "sim_dir_raw = parent_dir + \"data/sim/brightfield_mixed_synth/\""
+    "sim_dir_raw = parent_dir + \"data/sim/sample_data_synth/\""
    ]
   },
   {
