--- a/cycleGAN bin_cross.ipynb
+++ b/cycleGAN bin_cross.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## initializing parameters\n",
+    "## Initializing parameters\n",
     "\n",
     "Next, we want to locate paths for the simulated images and the experimental images as well as name the cyclegan models:\n",
     "\n",
@@ -64,18 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identifier = \"20240426_DATA_brightfield_mixed_edit\"\n",
-    "\n",
-    "parent_dir = \"/mnt/d/cycle_gan/\"\n",
-    "\n",
-    "exp_dir_raw = parent_dir + \"data/exp/brightfield_mixed_edit_real/\"\n",
-    "sim_dir_raw = parent_dir + \"data/sim/brightfield_mixed_synth/\"\n",
+    "identifier = \"sample_data\"\n",
     "\n",
     "gaussian   = 0.1 \n",
+    "\n",
+    "parent_dir = \".../cyclegan/\"\n",
+    "\n",
+    "exp_dir_raw = parent_dir + \"data/exp/sample_data_exp/\"\n",
+    "sim_dir_raw = parent_dir + \"data/sim/sample_data_synth/\"\n",
+    "\n",
+    "exp_dir = exp_dir_raw[:-1] + \"_256_slices/\"\n",
+    "sim_dir = sim_dir_raw[:-1] + \"_gauss_{}_256_slices/\".format(gaussian)\n",
     "\n",
     "num_channels=1"
    ]
@@ -135,9 +138,8 @@
     "print(exp_dir)\n",
     "print(sim_dir)\n",
     "\n",
+    "#comment out last two lines when resuming from checkpoint\n",
     "print(\"parsing directories\")\n",
-    "exp_dir = exp_dir_raw[:-1] + \"_256_slices/\"\n",
-    "sim_dir = sim_dir_raw[:-1] + \"_gauss_{}_256_slices/\".format(gaussian)\n",
     "parse_and_save_dir(exp_dir_raw, exp_dir, fine_size, stride)\n",
     "parse_and_save_dir(sim_dir_raw, sim_dir, fine_size, stride, num_channels=num_channels, gaussian=gaussian)"
    ]
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +397,6 @@
     "    print(exp_dir)\n",
     "    exit()\n",
     "\n",
-    "\n",
     "batch_idxs = min(min(len(data_sim), len(data_exp)), train_size) // batch_size\n",
     "\n",
     "total_epochs = 1e6//(batch_idxs*batch_size)\n",
@@ -403,7 +404,6 @@
     "\n",
     "print(\"batch_idxs = \", batch_idxs)\n",
     "print(\"total epochs = \", total_epochs)\n",
-    "\n",
     "\n",
     "try:\n",
     "    ( gen_exp_losses,   gen_sim_losses,\n",
@@ -421,8 +421,6 @@
     "\n",
     "ls = ls0\n",
     "le = le0\n",
-    "\n",
-    "\n",
     "\n",
     "while epoch < total_epochs:\n",
     "    start = time.time()\n",
@@ -540,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
@@ -554,14 +552,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.19"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
